crates/keron-lang/tests/corpus/errors/check/if_branch_mismatch.keron
val r = if true { 1 } else { "two" }
